--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
             "email": "chennurshashank@gmail.com"
         }
     ],
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {"chennur-shashank\\": "src/"}
     }
