--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
             "email": "chennurshashank@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+  "prefer-stable": true,
     "autoload": {
         "psr-4": {"chennur-shashank\\": "src/"}
     }
