--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
             "email": "chennurshashank@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "dev-master",
   "prefer-stable": true,
     "autoload": {
         "psr-4": {"chennur-shashank\\": "src/"}
