--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "chennurshashank@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {"chennur-shashank\\": "src/"}
     },
